# -*- mode: org -*-
# -*- coding: utf-8 -*-
#+TITLE: changelog
#+AUTHOR: Jongbin Oh
#+EMAIL: ohyecloudy@gmail.com

The format is based on [[https://keepachangelog.com/en/1.0.0/][Keep a Changelog]].

** Unrelease
*** Added
    - poor link purling
    - issues 옵션으로 gitlab issue를 조회할 수 있다
    - issues 조회 시 20개가 넘어가면 결과물에서 pagination 안내
    - commits-without-mr 커맨드로 merge request 없이 master 브랜치에 머지한 커밋을 조회할 수 있다
    - 복잡한 명령을 대체하는 alias 지원
    - help 명령어 추가
    - branch-access 커맨드로 protected branches 접근 레벨을 변경할 수 있다
    - config에서 설정할 수 있는 master 권한 추가
    - branch-access 커맨드는 master 권한을 가진 유저만 실행할 수 있다
    - pipelines 커맨드로 pipeline 상태를 조회할 수 있다
    - config에서 파이프라인 상태 변경 통보를 설정할 수 있다